modules/route-table/main.tf
resource "aws_route_table" "public" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.igw_id
  }

  tags = {
    Name = "public-rt"
  }
}

resource "aws_route_table" "private" {
  vpc_id = var.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = var.nat_id
  }

  tags = {
    Name = "private-rt"
  }
}




resource "aws_route_table_association" "public_assoc" {
  subnet_id      = var.public_subnet_id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_assoc" {
  for_each = { for idx, subnet_id in var.private_subnet_ids : idx => subnet_id }
#  for_each = toset(var.private_subnet_ids)
  subnet_id      = each.value
#  subnet_id      = var.private_subnet_ids
  route_table_id = aws_route_table.private.id
}
